# pico_test_vscode_debug

./: CMakeLists.txt  LICENSE  README.md  flash_program.c  hello_usb.c  openocd_test.sh  picoprobe.uf2
